docs: update swag config
